--- a/style.css
+++ b/style.css
@@ -45,3 +45,21 @@ body {
 .rating-star li {
   list-style: none;
 }
+
+.social-icon li {
+  list-style: none;
+  padding: 15px;
+}
+
+.social-icon li a {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  text-decoration: none;
+  font-size: 18px;
+  color: #fff;
+  width: 35px;
+  height: 35px;
+  border-radius: 50%;
+  background: #333;
+}
