--- a/style.css
+++ b/style.css
@@ -10,6 +10,18 @@ body {
   font-family: "Poppins", sans-serif;
 }
 
+.text-custom {
+  color: orangered;
+}
+
+.logo {
+  font-size: 1.6rem;
+}
+
+.slider {
+  margin-top: 4rem !important;
+}
+
 .overlay {
   width: 100%;
   height: 100%;
@@ -21,11 +33,6 @@ body {
   );
   position: absolute;
   top: 0;
-}
-
-.slider-title {
-  font-size: 1.5rem;
-  font-weight: bold;
 }
 
 .btn-custom {
@@ -62,4 +69,32 @@ body {
   height: 35px;
   border-radius: 50%;
   background: #333;
+}
+
+.arrow-left {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 35px;
+  height: 35px;
+  border-radius: 50%;
+  color: #1c8d73;
+  background: #acecdd;
+  top: 40%;
+  left: -7px;
+  z-index: 1;
+}
+
+.arrow-right {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 35px;
+  height: 35px;
+  border-radius: 50%;
+  color: #fff;
+  background: #1c8d73;
+  top: 40%;
+  right: -7px;
+  z-index: 1;
 }
